Add branching to show results for first question.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             </div>
             <div class="radio">
               <label>
-              <input type="radio" name="platform" value="front" checked>
+              <input type="radio" name="platform" value="front">
                 Front-end web development. I want to build websites!
               </label>
             </div>
             <div class="radio">
               <label>
-              <input type="radio" name="platform" value="back" checked>
+              <input type="radio" name="platform" value="back">
                 Back-end development. I want to increase efficiency!
               </label>
             </div>
