Add remaining questions to survey with jquery variables.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           </div>
 <!-- NOTE: platform section -->
           <div class="form-group">
+            <h3>Question 1:</h3>
             <label for="platform">What platform interests you?</label>
             <div class="radio">
               <label>
@@ -45,6 +46,81 @@
               </label>
             </div>
           </div>
+<!-- NOTE: Workplace section -->
+          <div class="form-group">
+            <h3>Question 2:</h3>
+            <label for="workplace">Where do you want to work?</label>
+            <div class="radio">
+              <label>
+              <input type="radio" name="workplace" value="money" checked>
+                Doesn't matter. I want to make money.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+              <input type="radio" name="workplace" value="startup">
+                A fast paced startup.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+              <input type="radio" name="workplace" value="corporate">
+                At a corporate company like Microsoft.
+              </label>
+            </div>
+          </div>
+<!-- NOTE: Gaming -->
+          <div class="form-group">
+            <h3>Question 3:</h3>
+            <label for="gaming">Do you want to work in game development?</label>
+            <div class="radio">
+              <label>
+              <input type="radio" name="gaming" value="yesgaming" checked>
+                Yes! It's why I got into development.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+              <input type="radio" name="gaming" value="nogaming">
+                No. It doesn't interest me.
+              </label>
+            </div>
+          </div>
+<!-- NOTE: Real-time data question -->
+          <div class="form-group">
+            <h3>Question 4:</h3>
+            <label for="realtime">Do you want to build an app that provides real-time data like twitter?</label>
+            <div class="radio">
+              <label>
+              <input type="radio" name="realtime" value="norealtime" checked>
+                Yes! I love social media.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+              <input type="radio" name="realtime" value="yesrealtime">
+                No. It doesn't interest me.
+              </label>
+            </div>
+          </div>
+<!-- NOTE: Android question -->
+        <div class="form-group">
+          <h3>Question 5:</h3>
+          <label for="android">Do you want to work on Android apps?</label>
+          <div class="radio">
+            <label>
+            <input type="radio" name="android" value="noandroid" checked>
+              Yes! I love android.
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+            <input type="radio" name="android" value="yesandroid">
+              No. It doesn't interest me.
+            </label>
+          </div>
+        </div>
+<!-- NOTE: Submit button -->
           <button type="submit" class="btn btn-info">Submit</button>
         </form>
       </div>
