Add branching logic for track.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <label for="platform">What platform interests you?</label>
             <div class="radio">
               <label>
-              <input type="radio" name="platform" value="mobile" checked>
+              <input type="radio" name="platform" value="mobile">
                 Mobile. I want to build apps!
               </label>
             </div>
@@ -52,7 +52,7 @@
             <label for="workplace">Where do you want to work?</label>
             <div class="radio">
               <label>
-              <input type="radio" name="workplace" value="money" checked>
+              <input type="radio" name="workplace" value="money">
                 Doesn't matter. I want to make money.
               </label>
             </div>
@@ -75,13 +75,13 @@
             <label for="gaming">Do you want to work in game development?</label>
             <div class="radio">
               <label>
-              <input type="radio" name="gaming" value="yesgaming" checked>
+              <input type="radio" name="gaming" value="true">
                 Yes! It's why I got into development.
               </label>
             </div>
             <div class="radio">
               <label>
-              <input type="radio" name="gaming" value="nogaming">
+              <input type="radio" name="gaming" value="false">
                 No. It doesn't interest me.
               </label>
             </div>
@@ -92,13 +92,13 @@
             <label for="realtime">Do you want to build an app that provides real-time data like twitter?</label>
             <div class="radio">
               <label>
-              <input type="radio" name="realtime" value="norealtime" checked>
+              <input type="radio" name="realtime" value="true">
                 Yes! I love social media.
               </label>
             </div>
             <div class="radio">
               <label>
-              <input type="radio" name="realtime" value="yesrealtime">
+              <input type="radio" name="realtime" value="false">
                 No. It doesn't interest me.
               </label>
             </div>
@@ -109,13 +109,13 @@
           <label for="android">Do you want to work on Android apps?</label>
           <div class="radio">
             <label>
-            <input type="radio" name="android" value="noandroid" checked>
+            <input type="radio" name="android" value="true">
               Yes! I love android.
             </label>
           </div>
           <div class="radio">
             <label>
-            <input type="radio" name="android" value="yesandroid">
+            <input type="radio" name="android" value="false">
               No. It doesn't interest me.
             </label>
           </div>
