--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tracks at Epicodus</title>
   </head>
   <body>
     <div class="container">
@@ -129,18 +129,27 @@
         <div class="result">
           <h2>Java/Android</h2>
           <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track.</p>
+          <div class="retake">
+            <button type="submit" class="btn btn-info">Retake</button>
+          </div>
         </div>
       </div>
       <div class="well" id="cssreact">
         <div class="result">
           <h2>CSS/React</h2>
           <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track.</p>
+          <div class="retake">
+            <button type="submit" class="btn btn-info">Retake</button>
+          </div>
         </div>
       </div>
       <div class="well" id="cnet">
         <div class="result">
           <h2>C#/.NET</h2>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track.</p>
+          <div class="retake">
+            <button type="submit" class="btn btn-info">Retake</button>
+          </div>
         </div>
       </div>
     </div>
