Comment out retake button and logic.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h2>Java/Android</h2>
           <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track.</p>
           <div class="retake">
-            <button type="submit" class="btn btn-info">Retake</button>
+            <!-- <button type="submit" class="btn btn-info">Retake</button> -->
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
           <h2>CSS/React</h2>
           <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track.</p>
           <div class="retake">
-            <button type="submit" class="btn btn-info">Retake</button>
+            <!-- <button type="submit" class="btn btn-info">Retake</button> -->
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
           <h2>C#/.NET</h2>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track.</p>
           <div class="retake">
-            <button type="submit" class="btn btn-info">Retake</button>
+            <!-- <button type="submit" class="btn btn-info">Retake</button> -->
           </div>
         </div>
       </div>
