Link and style language icons for result.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
@@ -127,7 +133,8 @@
 <!-- NOTE: Results of survey -->
       <div class="well" id="java">
         <div class="result">
-          <h2>Java/Android</h2>
+          <h2>Java / Android</h2>
+          <i class="devicon-java-plain"></i><i class="devicon-android-plain"></i>
           <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
@@ -136,7 +143,8 @@
       </div>
       <div class="well" id="cssreact">
         <div class="result">
-          <h2>CSS/React</h2>
+          <h2>CSS / React</h2>
+          <i class="devicon-css3-plain"></i><i class="devicon-react-original"></i>
           <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
@@ -145,7 +153,8 @@
       </div>
       <div class="well" id="cnet">
         <div class="result">
-          <h2>C#/.NET</h2>
+          <h2>C# / .NET</h2>
+          <i class="devicon-csharp-plain"></i><i class="devicon-dot-net-plain"></i>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
