--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-      <h1>Track Suggester for Developers</h1>
+      <h1>Developer Tracks</h1>
       <p>Let us help you decide which track to take at Epicodus!</p>
       </div>
       <div class="well" id="survey">
@@ -26,8 +26,8 @@
         <form>
 <!-- NOTE: Name field -->
           <div class="form-group">
-            <label for="name">Enter your name:</label>
-            <input id="name" class="form-control" type="text">
+            <label for="name">Enter your name:</label >
+            <input id="name" class="form-control" type="text" required>
           </div>
 <!-- NOTE: platform section -->
           <div class="form-group">
@@ -156,9 +156,9 @@
           <h2>C# / .NET</h2>
           <i class="devicon-csharp-plain"></i><i class="devicon-dot-net-plain"></i>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track.</p>
-          <div class="retake">
-            <!-- <button type="submit" class="btn btn-info">Retake</button> -->
-          </div>
+          <!-- <div class="retake">
+            <button type="submit" class="btn btn-info">Retake</button>
+          </div> -->
         </div>
       </div>
     </div>
