Add javascript link and icon to result.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
@@ -21,8 +22,8 @@
       <p>Let us help you decide which track to take at Epicodus!</p>
       </div>
       <div class="well" id="survey">
-        <h2>Survey</h2>
-        <p>Fill out the survey below:</p>
+        <h2>Track Suggester</h2>
+        <p>Fill out the survey below for advice on which developer track to take:</p>
         <form>
 <!-- NOTE: Name field -->
           <div class="form-group">
@@ -134,8 +135,10 @@
       <div class="well" id="java">
         <div class="result">
           <h2>Java / Android</h2>
-          <i class="devicon-java-plain"></i><i class="devicon-android-plain"></i>
-          <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track.</p>
+          <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
+          <a href="https://www.epicodus.com/java/"><i class="devicon-java-plain"></i></a>
+          <a href="https://www.epicodus.com/android"><i class="devicon-android-plain"></i></a>
+          <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
           </div>
@@ -143,9 +146,11 @@
       </div>
       <div class="well" id="cssreact">
         <div class="result">
-          <h2>CSS / React</h2>
-          <i class="devicon-css3-plain"></i><i class="devicon-react-original"></i>
-          <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track.</p>
+          <h2>CSS / Javascript / React</h2>
+          <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
+          <a href="https://www.epicodus.com/css"><i class="devicon-css3-plain"></i></a>
+          <a href="https://www.epicodus.com/react"><i class="devicon-react-original"></i></a>
+          <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
           </div>
@@ -153,9 +158,11 @@
       </div>
       <div class="well" id="cnet">
         <div class="result">
-          <h2>C# / .NET</h2>
-          <i class="devicon-csharp-plain"></i><i class="devicon-dot-net-plain"></i>
-          <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track.</p>
+          <h2>Javascript / C# / .NET</h2>
+          <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
+          <a href="https://www.epicodus.com/c-sharp"><i class="devicon-csharp-plain"></i></a>
+          <a href="https://www.epicodus.com/net/"><i class="devicon-dot-net-plain"></i></a>
+          <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <!-- <div class="retake">
             <button type="submit" class="btn btn-info">Retake</button>
           </div> -->
