Moved anchor tags into div.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>Let us help you decide which track to take at Epicodus!</p>
       </div>
       <div class="well" id="survey">
-        <h2>Track Suggester</h2>
+        <h2>Track Selector</h2>
         <p>Fill out the survey below for advice on which developer track to take:</p>
         <form>
 <!-- NOTE: Name field -->
@@ -135,10 +135,12 @@
 <!-- NOTE: Results of survey -->
       <div class="well" id="java">
         <div class="result">
-          <h2>Java / Android</h2>
-          <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
-          <a href="https://www.epicodus.com/java/"><i class="devicon-java-plain"></i></a>
-          <a href="https://www.epicodus.com/android"><i class="devicon-android-plain"></i></a>
+          <h2>Javascript / Java / Android</h2>
+          <div class="icons">
+            <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
+            <a href="https://www.epicodus.com/java/"><i class="devicon-java-plain"></i></a>
+            <a href="https://www.epicodus.com/android"><i class="devicon-android-plain"></i></a>
+          </div>
           <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
@@ -148,9 +150,11 @@
       <div class="well" id="cssreact">
         <div class="result">
           <h2>CSS / Javascript / React</h2>
-          <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
-          <a href="https://www.epicodus.com/css"><i class="devicon-css3-plain"></i></a>
-          <a href="https://www.epicodus.com/react"><i class="devicon-react-original"></i></a>
+          <div class="icons">
+            <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
+            <a href="https://www.epicodus.com/css"><i class="devicon-css3-plain"></i></a>
+            <a href="https://www.epicodus.com/react"><i class="devicon-react-original"></i></a>
+          </div>
           <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <div class="retake">
             <!-- <button type="submit" class="btn btn-info">Retake</button> -->
@@ -160,9 +164,11 @@
       <div class="well" id="cnet">
         <div class="result">
           <h2>Javascript / C# / .NET</h2>
-          <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
-          <a href="https://www.epicodus.com/c-sharp"><i class="devicon-csharp-plain"></i></a>
-          <a href="https://www.epicodus.com/net/"><i class="devicon-dot-net-plain"></i></a>
+          <div class="icons">
+            <a href="https://www.epicodus.com/javascript"><i class="devicon-javascript-plain"></i></a>
+            <a href="https://www.epicodus.com/c-sharp"><i class="devicon-csharp-plain"></i></a>
+            <a href="https://www.epicodus.com/net/"><i class="devicon-dot-net-plain"></i></a>
+          </div>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <!-- <div class="retake">
             <button type="submit" class="btn btn-info">Retake</button>
