Add retake quiz button to result.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </div>
           <p>Congratulations, <span class="name"></span>! You have selected Java/Android as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <div class="retake">
-            <!-- <button type="submit" class="btn btn-info">Retake</button> -->
+              <a href="index.html"><button type="submit" class="btn btn-info">Retake</button></a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
           </div>
           <p>Congratulations, <span class="name"></span>! You have selected CSS/React as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
           <div class="retake">
-            <!-- <button type="submit" class="btn btn-info">Retake</button> -->
+            <a href="index.html"><button type="submit" class="btn btn-info">Retake</button></a>
           </div>
         </div>
       </div>
@@ -170,9 +170,9 @@
             <a href="https://www.epicodus.com/net/"><i class="devicon-dot-net-plain"></i></a>
           </div>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
-          <!-- <div class="retake">
-            <button type="submit" class="btn btn-info">Retake</button>
-          </div> -->
+          <div class="retake">
+            <a href="index.html"><button type="submit" class="btn btn-info">Retake</button></a>
+          </div>
         </div>
       </div>
     </div>
