Add lines separating questions.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <p>Fill out the survey below for advice on which developer track to take:</p>
         <form>
 <!-- NOTE: Name field -->
-          <div class="form-group">
+          <div class="form-group" id="name-box">
             <label for="name">Enter your name:</label >
             <input id="name" class="form-control" type="text" required>
           </div>
-<!-- NOTE: platform section -->
-          <div class="form-group">
+<!-- NOTE: Platform section -->
+          <div class="form-group" id="question">
             <h3>Question 1:</h3>
             <label for="platform">What platform interests you?</label>
             <div class="radio">
@@ -77,7 +77,7 @@
               </label>
             </div>
           </div>
-<!-- NOTE: Gaming -->
+<!-- NOTE: Gaming Section -->
           <div class="form-group">
             <h3>Question 3:</h3>
             <label for="gaming">Do you want to work in game development?</label>
