Add result for none of the radio buttons being checked.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <button type="submit" class="btn btn-info">Submit</button>
         </form>
       </div>
-<!-- NOTE: Results of survey -->
+<!-- NOTE: Results of Java -->
       <div class="well" id="java">
         <div class="result">
           <h2>Javascript / Java / Android</h2>
@@ -147,6 +147,7 @@
           </div>
         </div>
       </div>
+<!-- NOTE: Results of CSS -->
       <div class="well" id="cssreact">
         <div class="result">
           <h2>CSS / Javascript / React</h2>
@@ -161,6 +162,7 @@
           </div>
         </div>
       </div>
+<!-- NOTE: Result of C-Sharp -->
       <div class="well" id="cnet">
         <div class="result">
           <h2>Javascript / C# / .NET</h2>
@@ -170,6 +172,16 @@
             <a href="https://www.epicodus.com/net/"><i class="devicon-dot-net-plain"></i></a>
           </div>
           <p>Congratulations, <span class="name"></span>! You have selected C#/.NET as your track. All tracks also include Javascript. Click on the icons above for more information.</p>
+          <div class="retake">
+            <a href="index.html"><button type="submit" class="btn btn-info">Retake</button></a>
+          </div>
+        </div>
+      </div>
+<!-- NOTE: No radio buttons checked -->
+      <div class="well" id="noresult">
+        <div class="result">
+          <h2>Nothing</h2>
+          <p><span class="name"></span>! You have not made any selections. Please retake the quiz.</p>
           <div class="retake">
             <a href="index.html"><button type="submit" class="btn btn-info">Retake</button></a>
           </div>
